refactor: move most of `Ripple`'s attached properties to `InteractionAssist`

--- a/src/WPF.Material/Theming/XAML/FloatingActionButton.xaml
+++ b/src/WPF.Material/Theming/XAML/FloatingActionButton.xaml
@@ -35,11 +35,11 @@
                         assists:InteractionAssist.IsEnabled="{TemplateBinding IsEnabled}"
                         assists:InteractionAssist.IsHovered="{TemplateBinding IsMouseOver}"
                         assists:InteractionAssist.IsPressed="{TemplateBinding IsPressed}"
+                        assists:InteractionAssist.IsRippleEnabled="True"
                         assists:ShapeAssist.Corner="{TemplateBinding assists:ShapeAssist.Corner}"
                         assists:ShapeAssist.Family="{TemplateBinding assists:ShapeAssist.Family}"
                         assists:ShapeAssist.Radius="{TemplateBinding assists:ShapeAssist.Radius}"
                         assists:ShapeAssist.Style="{TemplateBinding assists:ShapeAssist.Style}"
-                        controls:Ripple.IsAnimated="True"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
