--- a/src/WPF.Material/Theming/XAML/NavigationRail.xaml
+++ b/src/WPF.Material/Theming/XAML/NavigationRail.xaml
@@ -155,10 +155,10 @@
                             assists:InteractionAssist.IsEnabled="{TemplateBinding IsEnabled}"
                             assists:InteractionAssist.IsHovered="{TemplateBinding IsMouseOver}"
                             assists:InteractionAssist.IsPressed="{TemplateBinding IsPressed}"
+                            assists:InteractionAssist.IsRippleCentered="True"
+                            assists:InteractionAssist.IsRippleEnabled="True"
                             assists:ShapeAssist.Family="{TemplateBinding assists:ShapeAssist.Family}"
                             assists:ShapeAssist.Style="Full"
-                            controls:Ripple.IsAnimated="True"
-                            controls:Ripple.IsCentered="True"
                             Background="Transparent"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
