--- a/src/WPF.Material/Theming/XAML/Container.xaml
+++ b/src/WPF.Material/Theming/XAML/Container.xaml
@@ -62,7 +62,7 @@
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-        <Setter Property="controls:Ripple.IsAnimated" Value="False" />
+        <Setter Property="assists:InteractionAssist.IsRippleEnabled" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:Container}">
