--- a/src/WPF.Material/Theming/XAML/Ripple.xaml
+++ b/src/WPF.Material/Theming/XAML/Ripple.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:assists="clr-namespace:WPF.Material.Assists"
     xmlns:controls="clr-namespace:WPF.Material.Controls">
 
     <Style TargetType="{x:Type controls:Ripple}">
@@ -31,7 +32,7 @@
                     </controls:OverlapPanel>
 
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsUnbounded" Value="True">
+                        <Trigger Property="assists:InteractionAssist.IsRippleUnbounded" Value="True">
                             <Setter TargetName="Canvas" Property="Clip" Value="{x:Null}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
